feat：更新代碼生成模組以支援實體生成
- 修改 plopfile.js，將生成的檔案名稱加入時間戳。
- 更新 entity.hbs 模板，新增 <entity> 標籤以包裹生成的實體代碼。
- 將 CodeGenerationController 中的 previewTableCode 方法更名為 previewEntityCode，並更新相應的 DTO。
- 在 CodeGenerationService 中調整 previewEntityCode 方法，更新參數及返回格式。
- 更新相關 DTO，將 PreviewTableCodeReqDto 更名為 PreviewEntityCodeReqDto，並調整欄位描述。
- 在 CodeGenerationEntity 中更新 isGenerateTable 欄位名稱為 isGenerateEntity。

--- a/plop-templates/entity.hbs
+++ b/plop-templates/entity.hbs
@@ -1,3 +1,4 @@
+<entity>
 import { Entity{{#if hasColumn}}, Column{{/if}}{{#if hasPrimaryGeneratedColumn}}, PrimaryGeneratedColumn{{/if}}{{#if hasPrimaryColumn}}, PrimaryColumn{{/if}} } from 'typeorm'
 
 import { BaseEntity } from '@/common/entities/base.entity'
@@ -36,4 +37,4 @@ export class {{ className }} extends BaseEntity {
 
 {{/each}}
 }
-
+</entity>
