--- a/plop-templates/entity.hbs
+++ b/plop-templates/entity.hbs
@@ -29,8 +29,8 @@ export class {{ className }} extends BaseEntity {
   @Column({
     name: '{{ this.columnNameUnderline }}',
     type: '{{ this.dataType }}'{{#if this.length}},
-    length: {{ this.length }}{{/if}}{{#if this.isNotNull}},
-    nullable: {{#if (eq this.isNotNull 1)}}false{{else}}true{{/if}}{{/if}}{{#if (eq this.isAutoIncrement 1)}},
+    length: {{ this.length }}{{/if}}{{#if (eq this.isNotNull 0)}},
+    nullable: true{{/if}}{{#if (eq this.isAutoIncrement 1)}},
     generated: 'increment'{{/if}}{{#if this.comment}},
     comment: '{{ this.comment }}'{{/if}},
   })
