feat: 更新多個控制器的路由和權限
- 將多個控制器中的路由從 '/page' 修改為 '/list'
- 將相應的權限從 'page' 更新為 'query'

--- a/plop-templates/backend-code.hbs
+++ b/plop-templates/backend-code.hbs
@@ -104,8 +104,8 @@ export class {{ classNamePrefix }}Controller {
     return this.{{ camelName }}Service.create(create{{ classNamePrefix }}ReqDto)
   }
 
-  @Get('/page')
-  @HasPermission('{{ splitName.[1] }}:{{ splitName.[2] }}:page')
+  @Get('/list')
+  @HasPermission('{{ splitName.[1] }}:{{ splitName.[2] }}:query')
   @ApiOperation({ summary: '取得{{ unitName }}分頁列表' })
   @ApiResponse({ type: Find{{ classNamePrefix }}ResDto })
   @ResponseMessage('取得{{ unitName }}分頁列表成功')
